LCD/build/log/idf_py_stderr_output_62425
/home/garfield/github/esp32-idf-device/LCD/main/LCD.c: In function 'lcd_draw_char':
/home/garfield/github/esp32-idf-device/LCD/main/LCD.c:32:9: error: redefinition of 'scale'
   32 |     int scale = 2; // 放大倍数
      |         ^~~~~
/home/garfield/github/esp32-idf-device/LCD/main/LCD.c:25:9: note: previous definition of 'scale' with type 'int'
   25 |     int scale = 2; // 放大倍数
      |         ^~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:90: esp-idf/main/CMakeFiles/__idf_main.dir/LCD.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5807: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
